argocd/ingress_draft.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
  name: argocd
  namespace: argocd
spec:
  rules:
    - host: argocd.experimentallab.eu-de.containers.appdomain.cloud
      http:
        paths:
          - backend:
              serviceName: argocd-server
              servicePort: https
            path: /
  tls:
    - hosts:
        - argocd.experimentallab.eu-de.containers.appdomain.cloud
      secretName: experimentallab
